--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,8 @@
 
     <string name="wallet_name">Имя кошелька</string>
     <string name="wallet_amount">Баланс кошелька</string>
+    <string name="button_add_wallet">Добавить</string>
+    <string name="test_text_view_wallet">Кошелек</string>
     <string-array name="currency">
         <item>RUR</item>
         <item>USD</item>
