--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,5 @@
 
     <string name="expenditure_name">Имя расхода</string>
     <string name="test_text_view_expenditure">Расход</string>
+    <string name="wallet_edit_context_text">Редактировать</string>
 </resources>
