Доработана активность редактирования операции над кошельками. Реализована актуализация остатков старых и новых кошельков.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,7 @@
     <string name="not_enough_amount_on_wallet">Сумма списания не может быть больше остатка на кошельке</string>
     <string name="input_not_all_required_fields">Заполены не все обязательные поля</string>
     <string name="not_equal_currencies">Валюты кошельков не могут быть разными</string>
+    <string name="cant_change_currencies">При редактировании операции над кошельком нельзя менять валюту редактируемой операции</string>
     <string name="date_time_label_format">dd.MM.yyyy HH:mm</string>
     <string name="date_label_format">dd.MM.yyyy</string>
     <string name="time_label_format">HH:mm</string>
